--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ body {
   color: #427b28;
 }
 
-#resume a:hover, #footerList a:hover {
+#resume a:hover, #footer-list a:hover {
   color: #b8bb28;
 }
 
